# openuds

./: .gitignore  .gitmodules  .project  LICENSE  LICENSE.txt  README.md  SECURITY.md  TODO.txt  index.html  params.json
.github/: dependabot.yml
.github/workflows/: auto-assign.yml  test.yml
actor/: .gitignore  deps.txt
actor/linux/: Makefile  build-packages.sh  readme.txt  udsactor-template.spec  udsactor-unmanaged-template.spec
actor/macos/: net.virtualcable.udsactor.server.plist  notes.txt
actor/src/: .gitignore  UDSActorConfig.py  actor.py  (+4 more)
actors/: .gitignore  .project  UDSActorUser.py
client/: .gitignore  .project  README.md
guacamole-auth-uds/: .gitignore  pom.xml
guacamole-tunnel/: .classpath  .gitignore  .project  README.txt  pom.xml
linuxActor/: .project  .pydevproject
linuxActorXRDP/: .project
nxtuntransport/: description.jardesc
server/: .dmypy.json  .env  .project  .pydevproject  .pylintrc  conftest.py  coverage.ini  mypy.ini  pyrightconfig.json  pytest.ini  requirements.txt
ssh-tunnel/pam-http/: .autotools  .cproject  .gitignore  AUTHORS  CMakeLists.txt  Makefile.in  NEWS  README  configure.ac
ssh-tunnel/pam-http/doc/: requests.txt  setup.txt
ssh-tunnel/pam-http/src/: CMakeLists.txt  group.c  http.c  pam_uds.c  passwd.c  shadow.c  test.c
trunk/ssh-tunnel/pam-http/src/: Makefile.am  Makefile.in  http.h  pam_uds.c
tunnel-server/: .gitignore  .pylintrc  coverage.ini  pytest.ini  requirements.txt
udsProxy/: .gitignore  .project  compile.sh  daemonize.txt  udsproxy.cfg  udsproxy.service
windowsActor/: .gitignore  SENS.py  UDSActorConfig.manifest  UDSActorConfig.py  UDSActorConfig.spec  UDSActorConfig_version_info.txt  UDSActorService.manifest  UDSActorService.py  UDSActorService.spec  UDSActorService_version_info.txt  UDSActorUser.py  setup-config.py  setup-dialog.ui  setup-service.py  setup.py  setup_dialog_ui.py  test.py  windows_operations.py
(+3211 files in other folders)
